Review Request 13684 see PLS-6368, PLS-6858, PLS-7257 - fixed layout issue for talking points created time when window is narrow - product hierarchy functionality and ui done, waiting for newer designs - issue when userfield didn't match mappedfield making lattice fields not unmappable

--- a/le-ui/projects/common/assets/css/pickaday.css
+++ b/le-ui/projects/common/assets/css/pickaday.css
@@ -178,7 +178,6 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     color: #fff;
     font-weight: bold;
     background: #33aaff;
-    box-shadow: inset 0 1px 3px #178fe5;
     border-radius: 3px;
 }
 
