--- a/le-ui/projects/leadprioritization/app/import/content/calendar/calendar.component.scss
+++ b/le-ui/projects/leadprioritization/app/import/content/calendar/calendar.component.scss
@@ -1,4 +1,5 @@
 .import-calendar {
+    min-width: 900px; // because of the calendar
     .calander-container {
         margin: 0 20px;
         margin-bottom: 20px;
@@ -45,6 +46,7 @@
                 line-height: 40px;
                 border-radius: 50%;
                 cursor: pointer;
+                &.selected, 
                 &:hover {
                     background-color: #f5f5f5;
                     color: #666;
@@ -105,7 +107,33 @@
         }
         .is-selected {
             .pika-button {
-                background-color: #447db9
+                background-color: #447db9;
+                &:hover {
+                    color: white;
+                }
+            }
+        }
+    }
+    &:not(.has-calendar) {
+        .month-picker {
+            & > li {
+                & > div {
+                    &.active {
+                        color: inherit;
+                        background-color: transparent;
+                        font-weight: normal;
+                    }
+                }
+            }
+        }
+        .file-import-datepicker {
+            .is-selected {
+                .pika-button {
+                    background-color: transparent;
+                    color: #666;
+                    box-shadow: none;
+                    font-weight: normal;
+                }
             }
         }
     }
@@ -113,7 +141,6 @@
         margin-bottom: 20px;
         h5 {
             text-align: center;
-            font-weight: bold;
         }
         .quarter-picker {
             @include flex-container;
@@ -169,5 +196,10 @@
         &.starting-day {
             margin-top: 30px;
         } 
+    }
+    .note {
+        strong {
+            font-weight: bold;
+        }
     }
 }
